--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "# Get this from the \"Manage App\" page. Make sure you set them\n",
     "# back to None before pushing this to GitHub, since otherwise\n",
     "# your credentials will be compromised\n",
-    "api_key = 'xEF_oOe1IFD_seT133ZSZmnmBOBdN32JrxQPf5D5Ukx6OSAAW6gbUOL7-DnKJpfYUeHTLMruCJTkCO8mWOuXWZqUi8vCV09PLMZY4isGMS6VRrq1zkythdO6oO9IZHYx'\n",
+    "api_key = None\n",
     "\n",
     "# These can be whatever you want! But the solution uses \"pizza\"\n",
     "# and \"New York NY\" if you want to compare your work directly\n",
